--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <img src="assets/img/profile.JPG" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Mohammad<br>Djouadar</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://www.linkedin.com/in/mohammad-djouadar-a17527254/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/mohammad-djouadar/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -62,7 +62,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Mohammad Djouadar</h1>
-      <p>Je suis <span class="typed" data-typed-items="Administrateur système, Administrateur réseau"></span></p>
+      <p>Je suis <span class="typed" data-typed-items="Étudiant, à la recherche d'un stage"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -74,7 +74,7 @@
 
         <div class="section-title">
           <h2>À propos</h2>
-          <p>Passionné de sports et d’informatique, ma vie est dirigée par ces deux grands domaines. Je suis Mohammad Djouadar, 19 ans et étudiant.</p>
+          <p>Passionné d'informatique et de sports, ma vie est dirigée par ces deux grands domaines. Je suis Mohammad Djouadar, 19 ans et étudiant.</p>
         </div>
 
         <div class="row">
@@ -82,7 +82,7 @@
             <img src="assets/img/profile_bigger.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Administrateur système &amp; réseau</h3>
+            <h3>Souhaite devenir Administrateur système &amp; réseau</h3>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -95,14 +95,15 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Niveau:</strong> <span>Bac +3</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Mail:</strong> <span>mohammad.djoud@yahoo.fr</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.mohammad-djouadar.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span><a href="#">Ici</a></span></li>
                 </ul>
               </div>
             </div>
             <p>
               L'informatique est un ensemble de techniques qui m’a toujours intrigué. Depuis petit, j’essaye toujours de comprendre les fonctionnements et mécanismes des appareils que je possède.<br>
+              C'est ce qui m'a poussé à suivre ce chemin dans mes études et rejoindre la licence de Conception des Gestions d'Infrastructures Réseaux.<br>
               <br>En plus de ça, je garde un esprit sain en pratiquant des sports collectifs comme le football, des sports individuels comme la boxe et gardant une forme impeccable grâce à la musculation et des footings.<br>
-              <br>Né en 2003, j’ai toujours été curieux. Je m'intéresse à de nombreux domaines tels que l’histoire, la littérature, la musique et la mode.
+              <br>Né en 2003, j’ai toujours été curieux. Je m'intéresse à de nombreux domaines tels que la musique, la littérature ou la mode.
             </p>
           </div>
         </div>
@@ -134,7 +135,7 @@
             <div class="progress">
               <span class="skill">Script <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -142,13 +143,6 @@
               <span class="skill">C++ <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">C <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -184,20 +178,6 @@
               </div>
             </div>
 
-            <div class="progress">
-              <span class="skill">Suite Adobe <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Pack Office <i class="val">80%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
           </div>
 
         </div>
@@ -228,23 +208,23 @@
 
             <h3 class="resume-title">Scolarité</h3>
             <div class="resume-item">
-              <h4>Licence professionnelle, Conception &amp; Gestion des Rnfrastructures Réseaux</h4>
+              <h4><a href="https://iut-a.univ-lille.fr/lp-cgir/" target="_blank" rel="noopener noreferrer">Licence professionnelle, Conception &amp; Gestion des Infrastructures Réseaux</a></h4>
               <h5>2022 - 2023</h5>
               <p><em>IUT A de Lille, Villeneuve-d'Ascq, France</em></p>
               <p>Linux, Scripts, Services Réseaux, Sécurité, Virtualisation et Déploiements.</p>
             </div>
             <div class="resume-item">
-              <h4>Brevet de Technicien
+              <h4> <a href="https://www.lyceecolbert-tg.org/etudier-a-colbert/bts/bts-systemes-numeriques-option-informatique-reseaux/" target="_blank" rel="noopener noreferrer">Brevet de Technicien
                 Supérieur
                 Systèmes Numériques : 
                 Option Informatique et
-                Réseaux</h4>
+                Réseaux</a></h4>
               <h5>2020 - 2022</h5>
               <p><em>Lycée Numérique Colbert, Tourcoing, France</em></p>
               <p>Langages de programmation : C, C++, JavaScript, Java pour Android, HTML/CSS, SQL et Cisco.</p>
             </div>
             <div class="resume-item">
-              <h4>Baccalauréat Scientifique</h4>
+              <h4> Baccalauréat Scientifique</h4>
               <h5>2018 - 2020</h5>
               <p><em>Lycée Gambetta, Tourcoing, France</em></p>
               <p>Obtenu avec Mention Assez-Bien.</p>
@@ -265,6 +245,7 @@
               <h5>de Mai à Juillet 2021</h5>
               <p><em>Lille, France</em></p>
               <ul>
+                <li>Fondateur : <a href="https://www.linkedin.com/in/mustafasenhaji/" target=_blank rel="noopener noreferrer">Mustafa Senhaji</a></li>
                 <li>Durée de 6 semaines.</li>
                 <li>Création et gestion d'un site web d'e-
                   commerce fonctionnel.</li>
@@ -272,7 +253,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Stage d’observation  au Pôle multimédia de la Ludomédiathèque Colette</h4>
+              <h4>Stage d’observation au Pôle multimédia de la Ludomédiathèque Colette</h4>
               <h5>Décembre 2017</h5>
               <p><em>Tourcoing, France</em></p>
               <ul>
@@ -319,17 +300,14 @@
               </div>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/spotify_playlist.JPG" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/salle_boxe.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/spotify_playlist.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="[Playlist coopérative] Fleeting Pleasures : La playlist réalisée par une tout une équipe d'auditeurs de musique."><i class="bx bx-plus"></i></a>
-                <a href="https://open.spotify.com/playlist/1tU8LetPaWXWDVahB68ObN" title="Lien pour écouter"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/salle_boxe.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Une des salles pour pratiquer un des plus beaux sports."><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/latrouvaille_icon.png" class="img-fluid" alt="">
@@ -358,17 +336,17 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href=""></a>Adapation rapide</h4>
-            <p class="description">Très sérieux et adepte du travail d'équipe, je n'aurai pas de mal à me former et apprendre de vous !</p>
+            <h4 class="title"><a >Service #1</a></h4>
+            <p class="description">Description Service #1</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Linux</a></h4>
+            <h4 class="title"><a >Linux</a></h4>
             <p class="description">Scripts Bash pour automatisation et fichiers de configurations.</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">WordPress</a></h4>
+            <h4 class="title"><a href="https://wordpress.com/fr/" target=_blank rel="noopener noreferrer">WordPress</a></h4>
             <p class="description">Création, gestion et hébergement de vos blogs ou sites "vitrines" WordPress.</p>
           </div>
         </div>
